@@ -146,7 +146,7 @@ class ChannelFeed extends FeedItem {
 		global $wgStylePath, $wgStyleVersion;
 
 		$this->httpHeaders();
-		echo '<?xml version="1.0" encoding="utf-8"?>' . "\n";
+		echo '<?xml version="1.0"?>' . "\n";
 		echo '<?xml-stylesheet type="text/css" href="' .
 			htmlspecialchars( wfExpandUrl( "$wgStylePath/common/feed.css?$wgStyleVersion" ) ) .
 			'"?' . ">\n";
